# neuralCreativityServer

./: .gitignore  INSTALL.md  LICENSE  README.md  index.html  sketches_png.zip.1
server/: CMakeLists.txt  README.md  config.txt
server/caffeModel/: deploy.prototxt  map.txt
server/saveData/: README.md
server/src/: dummyClient.cpp  helper.cpp  helper.h  neuralCreativityMain.cpp  socketClient.cpp  socketClient.h  socketServer.cpp  socketServer.h
train/: processFiles.py
train/buildYourStoryNet128/: quick_solver.prototxt  resumetrain.sh  solver.prototxt  train.sh  train_val.prototxt
train/buildYourStoryNet128/untitled folder/: caffenet_train_val.prototxt
